editor-components/footer/footer3/footer3.module.scss
@use "../../../../composer-tools//composer-base-components//base//utitilities/viewports.module.scss" as *;

.container {
  width: 100%;

  &.absolute {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    background: transparent;

    .max-content {
      .footer-page {
        .first-container {
          background: transparent;
        }

        .second-container {
          background: transparent;
        }
      }
    }
  }

  .max-content {
    .footer-page {
      width: 100%;
      display: flex;
      flex-direction: column;

      .first-container {
        padding: 80px var(--composer-gap-xl) var(--composer-gap-md) var(--composer-gap-xl) !important;
        .first-max-content {
          .items {
            display: flex;
            flex-wrap: wrap;
            justify-content: space-between;
            width: 100%;
            gap: var(--composer-gap-lg);

            .header,
            .list-group {
              flex: 1;
              min-width: 200px;
              max-width: 310px;
              width: 100%;
            }

            .header {
              display: flex;
              flex-direction: column;
              align-items: baseline;
              gap: var(--composer-gap-md);

              .logo {
                .image {
                  width: 200px;
                  height: var(--composer-gap-lg);
                  object-fit: cover;
                }
              }

              .description {
                text-align: left;
                color: var(--composer-font-color-primary);
              }

              .socials-container {
                display: flex;
                align-items: center;
                gap: var(--composer-gap-sm);

                .socials-element {
                  display: flex;
                  align-items: center;
                  justify-content: center;
                  transition: all 0.3s ease;

                  .icon {
                    width: var(--composer-gap-md);
                    height: var(--composer-gap-md);
                    color: var(--composer-font-color-primary);
                    transition: all 0.3s ease;
                    font-size: 1.5rem;
                  }

                  &[data-has-link="true"] {
                    cursor: pointer;

                    &[data-animation~="animate1"]:hover {
                      .icon {
                        color: var(--composer-primary-color);
                      }
                    }

                    &[data-animation~="animate2"]:hover {
                      transform: translateY(-3px);
                      .icon {
                        color: var(--composer-primary-color);
                      }
                    }

                    &[data-animation~="animate3"]:hover {
                      transform: scale(1.2);
                      .icon {
                        color: var(--composer-primary-color);
                      }
                    }
                  }
                }
              }
            }

            .list-group {
              display: flex;
              flex-direction: column;
              justify-content: flex-start;
              align-items: flex-start;
              gap: var(--composer-gap-md);

              .title {
                color: var(--composer-font-color-primary);
              }

              .text-container {
                gap: var(--composer-gap-xs);
                width: 100%;

                .element {
                  display: flex;
                  align-items: center;
                  gap: var(--composer-gap-sm);
                  transition: all 0.3s ease;

                  .text {
                    color: var(--composer-font-color-primary);
                    text-align: center;
                  }

                  .element-icon {
                    color: var(--composer-font-color-primary);
                    font-size: 1rem;
                  }

                  &.has-path {
                    .text, .element-icon {
                      transition: all 0.3s ease;
                    }
                    
                    &[data-animation~="animate1"]:hover {
                      .text, .element-icon {
                        color: var(--composer-primary-color);
                      }
                    }

                    &[data-animation~="animate2"]:hover {
                      transform: translateY(-3px);
                      .text, .element-icon {
                        color: var(--composer-primary-color);
                      }
                    }

                    &[data-animation~="animate3"]:hover {
                      transform: scale(1.05);
                      .text, .element-icon {
                        color: var(--composer-primary-color);
                      }
                    }
                  }
                }
              }
            }
          }

        }
      }

      .line {
        border-top: 1px solid rgb(var(--composer-font-color-primary-rgb), 0.5);
        width: 100%;
        height: 1px;
      }

      .second-container {
        padding: var(--composer-gap-md) var(--composer-gap-xl) !important;

        .second-max-content {
          .footer-bottom {
            display: flex;
            justify-content: space-between;

            .bottom-text,
            .links {
              flex: 1;
            }

            .bottom-text {
              color: var(--composer-font-color-primary);
              text-align: start;
            }

            .links {
              display: flex;
              align-items: center;
              justify-content: end;
              gap: var(--composer-gap-md);

              .link-element {
                transition: all 0.3s ease;

                .link-text {
                  color: var(--composer-font-color-primary);
                  transition: all 0.3s ease;
                }

                &.has-path {
                  .link-text {
                    transition: all 0.3s ease;
                  }
                  
                  &[data-animation~="animate1"]:hover {
                    .link-text {
                      color: var(--composer-primary-color);
                    }
                  }

                  &[data-animation~="animate2"]:hover {
                    transform: translateY(calc(var(--composer-gap-xs) * -1));
                    .link-text {
                      color: var(--composer-primary-color);
                    }
                  }

                  &[data-animation~="animate3"]:hover {
                    transform: scale(1.05);
                    .link-text {
                      color: var(--composer-primary-color);
                    }
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .footer-page {
        flex-direction: column;

        .first-container {
          .first-max-content {
            .items {
              .header,
              .list-group {
                flex: 1;
                min-width: 300px;
                max-width: 310px;
                width: 100%;
              }

              .list-group {
                display: flex;
                flex-direction: column;
                justify-content: flex-start;
                align-items: flex-start;

                .title {
                  text-align: left;
                }

                .text-container {
                  align-items: baseline;
                  .element {
                    display: flex;
                    align-items: baseline;
                    gap: var(--composer-gap-sm);
                  }
                }
              }
            }
          }
        }

        .second-container {
          padding: var(--composer-gap-md) var(--composer-gap-lg) !important;

          .second-max-content {
            .footer-bottom {
              flex-direction: column;
              align-items: center;

              .bottom-text {
                width: fit-content;
              }

              &.center {
                align-items: center;
              }

              .links {
                content: "";
              }
            }
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    .max-content {
      .footer-page {
        .first-container {
          .first-max-content {
            .items {
              flex-direction: column;

              .header,
              .list-group {
                flex: 1;
                min-width: unset;
                max-width: unset;
                width: 100%;
                align-items: center;
                .description{
                  text-align: center;
                }
              }

              .list-group {
                .text-container {
                  .element {
                    content: "";
                  }
                }
              }
              .list-group{
                .title{
                  text-align: center;
                }
                .text-container{
                  align-items: center;
                  .element{
                    .text{
                      text-align: center;
                    }
                  }
                }
              }
            }
          }
        }

        .second-container {
          padding: var(--composer-gap-md) !important;

          .second-max-content {
            .footer-bottom {
              gap: var(--composer-gap-md);
              align-items: center;
              .bottom-text{
                text-align: center;
              }
              .text {
                margin: 0;
                
              }

              .links {
                .link-text {
                  margin: 0;
                }
              }
            }
          }
        }
      }
    }
  }
}

